tests/NormalTests/paczka1/small_fuzzy/40386741.err
Error in line 2: TPbTG S960 50,2
Error in line 9: S960 A222 80,5
